align fix

--- a/client/src/components/ProjectCard/style.css
+++ b/client/src/components/ProjectCard/style.css
@@ -10,7 +10,7 @@
     width: 100%;
     border-radius: 8px;
     height: 200px;
-    object-fit: cover;
+    object-fit: fill;
     padding: .5rem;
 }
 
